# IndexTree-SimpleDataStructure

./: README.md  requirements_dev.txt  setup.cfg  tox.ini
src/index_tree/: DataContainer.py  MyTree.py  NamedTreeNode.py  TreeNode.py
test/: test_DataContainer.py  test_DataContainerException.py  test_MyTree.py  test_NamedTreeNode.py
