[metadata]
name = index_tree
author = John Doe
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    index_tree
install_requires =
    numpy>=1.12
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
index_tree = py.typed

[flake8]
max-line-length = 160